Botoncito Dark Mode

--- a/index.html
+++ b/index.html
@@ -44,15 +44,12 @@
             <div class="header__logo">
                 <a href="#inicio">Mirato</a>
             </div>
-            <button id="dark-mode" class="dark__theme-btn">
-                <svg fill="currentColor" width="28" height="28" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                    preserveAspectRatio="xMidYMid meet">
-                    <title>Dark Mode</title>
-                    <path xmlns="http://www.w3.org/2000/svg"
-                        d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z">
-                    </path>
-                </svg>
-            </button>
+            <div class="dark__container">
+                <label class="switch" for="checkbox" id="dark-mode">
+                    <input type="checkbox" id="checkbox" />
+                    <div class="slider round"></div>
+                </label>
+            </div>
             <button class="header__menu-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path d="M4 6H20V8H4zM4 11H20V13H4zM4 16H20V18H4z" />
