Agrego etiquetas META

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Iconito que se muestra en la pestaña -->
     <link rel="canonical" href="https://mirato1.github.io/Lol-Page/">
 
+
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="https://mirato1.github.io/Lol-Page/assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://mirato1.github.io/Lol-Page/assets/favicon-32x32.png">
@@ -26,7 +27,9 @@
     <meta name="msapplication-config" content="https://mirato1.github.io/assets/Lol-Page/browserconfig.xml">
 
     <meta name="theme-color" content="#d90006">
+    <meta name="description" content="Página personal de Lol con mis recomendaciones runas etc para TOP.">
     <meta property="og:title" name="twitter:title" content="Lol Page - Giménez Lucas">
+    <meta property="og:description" content="Página personal de Lol con mis recomendaciones runas etc para TOP.">
     <meta property="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta property="og:image" name="twitter:image" content="https://mirato1.github.io/Lol-Page/assets/aatrox.jpg">
