Modifico unas cositas del "Acerca"

--- a/index.html
+++ b/index.html
@@ -100,7 +100,18 @@
                     <h1>Mirato</h1>
                     <h5><b>Challenger S9 S10 S11</b></h5>
                 </aside>
-                <p>Empecé a jugar en el año 2013, a principios de la <i>Season 3</i> </p>
+                <p>Empecé a jugar en el año 2013, a principios de la <i>Season 3</i> y maineo top</p>
+                <ul class="text__rank--list">
+                    <li><i>Season</i> 3 <b>Plata</b></li>
+                    <li><i>Season</i> 4 <b>Oro</b></li>
+                    <li><i>Season</i> 5 <b>Diamante</b></li>
+                    <li><i>Season</i> 6 <b>Diamante</b></li>
+                    <li><i>Season</i> 7 <b>Master</b></li>
+                    <li><i>Season</i> 8 <b>Master</b></li>
+                    <li><i>Season</i> 9 <b>Challenger</b></li>
+                    <li><i>Season</i> 10 <b>Challenger</b></li>
+                    <li><i>Season</i> 11 <b>Challenger</b></li>
+                </ul>
                 <div class="text__center text__left--lg">
                     <a class="btn" href="assets/CV Gimenez Lucas - Programador.pdf" target="_blank"
                         rel="noopener">DESCARGA MI CV</a>
@@ -115,45 +126,38 @@
                 <h2 class="text__center text__left--lg">Mis Habilidades</h2>
                 <div class="progress">
                     <p>
-                        <b>Desarrollo <i>Web Frontend</i></b>
-                        <b>70%</b>
+                        <b>Para <i>Carrear</i></b>
+                        <b>100%</b>
                     </p>
-                    <progress value="70" min="0" max="100"></progress>
+                    <progress value="100" min="0" max="100"></progress>
                 </div>
                 <div class="progress">
                     <p>
-                        <b>Desarrollo <i>Web Backend</i></b>
-                        <b>70%</b>
+                        <b>Para <i>Trollear</i></b>
+                        <b>50%</b>
                     </p>
-                    <progress value="70" min="0" max="100"></progress>
+                    <progress value="50" min="0" max="100"></progress>
                 </div>
                 <div class="progress">
                     <p>
-                        <b>Desarrollo <i>Web Backend</i></b>
-                        <b>70%</b>
+                        <b>Para <i>Surrendear</i></b>
+                        <b>20%</b>
                     </p>
-                    <progress value="70" min="0" max="100"></progress>
+                    <progress value="20" min="0" max="100"></progress>
                 </div>
                 <div class="progress">
                     <p>
-                        <b>Desarrollo <i>Web Backend</i></b>
-                        <b>70%</b>
+                        <b>Para <i>Tiltearme</i></b>
+                        <b>15%</b>
                     </p>
-                    <progress value="70" min="0" max="100"></progress>
+                    <progress value="15" min="0" max="100"></progress>
                 </div>
                 <div class="progress">
                     <p>
-                        <b>Desarrollo <i>Web Backend</i></b>
-                        <b>70%</b>
+                        <b>Para <i>Tryhardear</i></b>
+                        <b>85</b>
                     </p>
-                    <progress value="70" min="0" max="100"></progress>
-                </div>
-                <div class="progress">
-                    <p>
-                        <b>Desarrollo <i>Web Backend</i></b>
-                        <b>70%</b>
-                    </p>
-                    <progress value="70" min="0" max="100"></progress>
+                    <progress value="85" min="0" max="100"></progress>
                 </div>
             </article>
         </section>
