Cambio el titulo de hero image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             Soy
                             <b class="hero__image--important">Mirato</b>
                             <br>
-                            y soy <b>Toplaner</b>
+                            y juego <b>Top</b>
 
                         </h2>
                     </div>
