Agrego enlaces a los champs

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="progress">
                     <p>
                         <b>Para <i>Tryhardear</i></b>
-                        <b>85</b>
+                        <b>85%</b>
                     </p>
                     <progress value="85" min="0" max="100"></progress>
                 </div>
@@ -178,93 +178,115 @@
                     </article>
                 </a>
 
-                <article class="champion__card">
-                    <img src="assets/Akshan.png" alt="Akshan">
-                    <h3>Akshan</h3>
-                    <p>
-                        MACUMBERO
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Akshan.png" alt="Akshan">
+                        <h3>Akshan</h3>
+                        <p>
+                            MACUMBERO
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Sylas.png" alt="Sylas">
-                    <h3>Sylas</h3>
-                    <p>
-                        EL CHAMPION
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Sylas.png" alt="Sylas">
+                        <h3>Sylas</h3>
+                        <p>
+                            EL CHAMPION
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Riven.png" alt="Riven">
-                    <h3>Riven</h3>
-                    <p>
-                        LA ROTA
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Riven.png" alt="Riven">
+                        <h3>Riven</h3>
+                        <p>
+                            LA ROTA
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Kled.png" alt="Kled">
-                    <h3>Kled</h3>
-                    <p>
-                        EL TILTEADO
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Kled.png" alt="Kled">
+                        <h3>Kled</h3>
+                        <p>
+                            EL TILTEADO
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Camille.png" alt="Camille">
-                    <h3>Camille</h3>
-                    <p>
-                        LA CYBORG
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Camille.png" alt="Camille">
+                        <h3>Camille</h3>
+                        <p>
+                            LA CYBORG
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Akali.png" alt="Akali">
-                    <h3>Akali</h3>
-                    <p>
-                        LA NINJA
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Akali.png" alt="Akali">
+                        <h3>Akali</h3>
+                        <p>
+                            LA NINJA
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Fiora.png" alt="Fiora">
-                    <h3>Fiora</h3>
-                    <p>
-                        LA FRANCESA
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Fiora.png" alt="Fiora">
+                        <h3>Fiora</h3>
+                        <p>
+                            LA FRANCESA
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Gwen.png" alt="Gwen">
-                    <h3>Gwen</h3>
-                    <p>
-                        LA MUÑECA
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Gwen.png" alt="Gwen">
+                        <h3>Gwen</h3>
+                        <p>
+                            LA MUÑECA
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Jayce.png" alt="Jayce">
-                    <h3>Jayce</h3>
-                    <p>
-                        FACHERO SENDOH
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Jayce.png" alt="Jayce">
+                        <h3>Jayce</h3>
+                        <p>
+                            FACHERO SENDOH
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/LeeSin.png" alt="LeeSin">
-                    <h3>Lee Sin</h3>
-                    <p>
-                        EL CIEGO
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/LeeSin.png" alt="LeeSin">
+                        <h3>Lee Sin</h3>
+                        <p>
+                            EL CIEGO
+                        </p>
+                    </article>
+                </a>
 
-                <article class="champion__card">
-                    <img src="assets/Vladimir.png" alt="Vladimir">
-                    <h3>Vladimir</h3>
-                    <p>
-                        EL VÁMPIRO
-                    </p>
-                </article>
+                <a href="#runas">
+                    <article class="champion__card">
+                        <img src="assets/Vladimir.png" alt="Vladimir">
+                        <h3>Vladimir</h3>
+                        <p>
+                            EL VÁMPIRO
+                        </p>
+                    </article>
+                </a>
 
             </div>
         </section>
