Empiezo con el cambio a los campeones y agrego imágenes

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 
         <!-- Sección Campeones -->
         <section id="campeones" class="champions section">
-            <div class="container full__screen--lg">
+            <div class="container full__screen--lg" id="champs__section">
                 <h2 class="section__title">Mis "Mains"</h2>
 
-                <a href="#runas">
-                    <article class="champion__card">
+                <a href="#runas" class="campeon">
+                    <article class="champion__card" id="aatrox">
                         <img src="assets/Aatrox.png" alt="Aatrox">
                         <h3>Aatrox</h3>
                         <p>
@@ -178,8 +178,8 @@
                     </article>
                 </a>
 
-                <a href="#runas">
-                    <article class="champion__card">
+                <a href="#runas" class="campeon">
+                    <article class="champion__card" id="akshan">
                         <img src="assets/Akshan.png" alt="Akshan">
                         <h3>Akshan</h3>
                         <p>
@@ -188,8 +188,8 @@
                     </article>
                 </a>
 
-                <a href="#runas">
-                    <article class="champion__card">
+                <a href="#runas" class="campeon">
+                    <article class="champion__card" id="sylas">
                         <img src="assets/Sylas.png" alt="Sylas">
                         <h3>Sylas</h3>
                         <p>
@@ -199,7 +199,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="riven">
                         <img src="assets/Riven.png" alt="Riven">
                         <h3>Riven</h3>
                         <p>
@@ -209,7 +209,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="kled">
                         <img src="assets/Kled.png" alt="Kled">
                         <h3>Kled</h3>
                         <p>
@@ -219,7 +219,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="camille">
                         <img src="assets/Camille.png" alt="Camille">
                         <h3>Camille</h3>
                         <p>
@@ -229,7 +229,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="akali">
                         <img src="assets/Akali.png" alt="Akali">
                         <h3>Akali</h3>
                         <p>
@@ -239,7 +239,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="fiora">
                         <img src="assets/Fiora.png" alt="Fiora">
                         <h3>Fiora</h3>
                         <p>
@@ -249,7 +249,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="gwen">
                         <img src="assets/Gwen.png" alt="Gwen">
                         <h3>Gwen</h3>
                         <p>
@@ -259,7 +259,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="jayce">
                         <img src="assets/Jayce.png" alt="Jayce">
                         <h3>Jayce</h3>
                         <p>
@@ -269,7 +269,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="leesin">
                         <img src="assets/LeeSin.png" alt="LeeSin">
                         <h3>Lee Sin</h3>
                         <p>
@@ -279,7 +279,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card">
+                    <article class="champion__card" id="vladimir">
                         <img src="assets/Vladimir.png" alt="Vladimir">
                         <h3>Vladimir</h3>
                         <p>
@@ -342,18 +342,17 @@
                                         </div>
 
                                         <div class="primary__tree--keystone">
-                                            <div class="masteries keystone__row">
-                                                <div class="masterie masterie__inactive keystone">
+                                            <div class="masteries keystone__row masterie__inactive--row">
+                                                <div class="masterie keystone">
                                                     <img src="assets/Runas/PressTheAttack.png" alt="PressTheAttack">
                                                 </div>
-                                                <div class="masterie  masterie__inactive keystone">
+                                                <div class="masterie  keystone">
                                                     <img src="assets/Runas/LethalTempoTemp.png" alt="LethalTempoTemp">
                                                 </div>
-                                                <div class="masterie masterie__inactive keystone">
+                                                <div class="masterie keystone">
                                                     <img src="assets/Runas/FleetFootwork.png" alt="FleetFootwork">
                                                 </div>
-                                                <div class="masterie
-                                                                             keystone">
+                                                <div class="masterie keystone keystone__active">
                                                     <img src="assets/Runas/Conqueror.png" alt="Conqueror">
                                                 </div>
                                             </div>
