Sección Build Hechizos Prio Y Header hechos para c/u

--- a/index.html
+++ b/index.html
@@ -295,7 +295,13 @@
         <section id="runas" class="section">
             <div class="container full__screen--lg">
                 <h2 class="section__title">Runas y Maestrias</h2>
-                <article class="champion__info">
+                <article class="champion__info" style="background-image: radial-gradient(
+      400px 200px at 60% 34%,
+      rgba(7, 7, 32, 0) 0%,
+      rgb(7, 7, 32) 100%
+    ),
+    linear-gradient(90deg, rgb(7, 7, 32) 0%, rgba(7, 7, 32, 0.4) 100%),
+    url(assets/Aatrox_wall.jpg)">
                     <div class="champion__info--header">
                         <img src="assets/Aatrox.png" alt="Aatrox">
                         <div class="champion__header--content">
