Modifico las ID y modifico Scripts

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <h2 class="section__title">Mis "Mains"</h2>
 
                 <a href="#runas" class="campeon">
-                    <article class="champion__card" id="aatrox">
+                    <article class="champion__card" id="Aatrox">
                         <img src="assets/Aatrox.png" alt="Aatrox">
                         <h3>Aatrox</h3>
                         <p>
@@ -179,7 +179,7 @@
                 </a>
 
                 <a href="#runas" class="campeon">
-                    <article class="champion__card" id="akshan">
+                    <article class="champion__card" id="Akshan">
                         <img src="assets/Akshan.png" alt="Akshan">
                         <h3>Akshan</h3>
                         <p>
@@ -189,7 +189,7 @@
                 </a>
 
                 <a href="#runas" class="campeon">
-                    <article class="champion__card" id="sylas">
+                    <article class="champion__card" id="Sylas">
                         <img src="assets/Sylas.png" alt="Sylas">
                         <h3>Sylas</h3>
                         <p>
@@ -199,7 +199,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="riven">
+                    <article class="champion__card" id="Riven">
                         <img src="assets/Riven.png" alt="Riven">
                         <h3>Riven</h3>
                         <p>
@@ -209,7 +209,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="kled">
+                    <article class="champion__card" id="Kled">
                         <img src="assets/Kled.png" alt="Kled">
                         <h3>Kled</h3>
                         <p>
@@ -219,7 +219,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="camille">
+                    <article class="champion__card" id="Camille">
                         <img src="assets/Camille.png" alt="Camille">
                         <h3>Camille</h3>
                         <p>
@@ -229,7 +229,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="akali">
+                    <article class="champion__card" id="Akali">
                         <img src="assets/Akali.png" alt="Akali">
                         <h3>Akali</h3>
                         <p>
@@ -239,7 +239,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="fiora">
+                    <article class="champion__card" id="Fiora">
                         <img src="assets/Fiora.png" alt="Fiora">
                         <h3>Fiora</h3>
                         <p>
@@ -249,7 +249,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="gwen">
+                    <article class="champion__card" id="Gwen">
                         <img src="assets/Gwen.png" alt="Gwen">
                         <h3>Gwen</h3>
                         <p>
@@ -259,7 +259,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="jayce">
+                    <article class="champion__card" id="Jayce">
                         <img src="assets/Jayce.png" alt="Jayce">
                         <h3>Jayce</h3>
                         <p>
@@ -269,7 +269,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="leesin">
+                    <article class="champion__card" id="LeeSin">
                         <img src="assets/LeeSin.png" alt="LeeSin">
                         <h3>Lee Sin</h3>
                         <p>
@@ -279,7 +279,7 @@
                 </a>
 
                 <a href="#runas">
-                    <article class="champion__card" id="vladimir">
+                    <article class="champion__card" id="Vladimir">
                         <img src="assets/Vladimir.png" alt="Vladimir">
                         <h3>Vladimir</h3>
                         <p>
