Script para cambiar el icono y título del Árbol

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                     <div class="primary__tree">
                                         <div class="rune__tree--header">
                                             <div class="rune__img--container">
-                                                <img src="assets/precision.png" alt="Precision">
+                                                <img src="assets/Runas/Precision.png" alt="Precision">
                                             </div>
                                             <div class="rune__tree--title">Precision</div>
                                         </div>
@@ -350,7 +350,7 @@
                                         <div class="primary__tree--keystone">
                                             <div class="masteries keystone__row masterie__inactive--row">
                                                 <div class="masterie keystone">
-                                                    <img src="assets/Runas/PressTheAttack.png" alt="PressTheAttack">
+                                                    <img src="assets/Runas/PressTheAttack.png" alt=" PressTheAttack">
                                                 </div>
                                                 <div class="masterie  keystone">
                                                     <img src="assets/Runas/LethalTempoTemp.png" alt="LethalTempoTemp">
@@ -410,7 +410,7 @@
                                         <div class="rune__tree--v2">
                                             <div class="rune__tree--header">
                                                 <div class="rune__img--container">
-                                                    <img src="assets/resolve.png" alt="Resolve">
+                                                    <img src="assets/Runas/Resolve.png" alt="Resolve">
                                                 </div>
                                                 <div class="rune__tree--title">Resolve</div>
                                             </div>
